<resources>
    <string name="app_name">OpenGL 3X</string>
    <string name="splash_name">OPENGL ES 3X</string>

    <string name="no_settings">This renderer doesn\'t have settings.</string>

    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <string name="show_outlines">Show polygon outlines</string>

    <string name="ambient">Ambient</string>
    <string name="diffuse">Diffuse</string>
    <string name="specular">Specular</string>
    <string name="shininess">Shininess</string>

    <string name="enable_lightning">Enable Blinn-Phong lightning</string>

    <string name="occlusion_info">Background is cleared with green color when smaller cube\'s OpenGL occlusion query returns true. With red when smaller cube bounding sphere is outside of visible bounds.</string>

    <string name="light_diffuse_color">Light diffuse color</string>
    <string name="light_specular_color">Light specular color</string>
    <string name="material_settings">Material settings</string>
    <string name="roughness">Roughness</string>

    <string name="aperture_diameter">Aperture diameter</string>
    <string name="plane_in_focus">Plane in focus</string>

    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>
    <string name="filter">Filter</string>
    <string name="effect">Post Fx</string>

    <string name="section_basic">Basic Rendering</string>
    <string name="renderer_basic_cube_title">Cube</string>
    <string name="renderer_basic_cube_caption">Renders a single cube which has flat lightning on its faces. Light intensity is calculated from face normal z-value.</string>
    <string name="renderer_basic_light_title">Lightning</string>
    <string name="renderer_basic_light_caption">Renders a single cube which has per-pixel Blinn-Phong shaded lightning.</string>
    <string name="renderer_basic_cubemap_title">Cube mapping</string>
    <string name="renderer_basic_cubemap_caption">Renders a single cube with environment mapping. Additionally there is per-pixel Blinn-Phong shaded lightning.</string>
    <string name="renderer_basic_shadow_title">Shadow mapping</string>
    <string name="renderer_basic_shadow_caption">Renders a cube with shadow mapping. Additionally there is per-pixel Blinn-Phong shaded lightning.</string>
    <string name="renderer_basic_occlusion_title">Occlusion query</string>
    <string name="renderer_basic_occlusion_caption">Renders two cubes and uses OpenGL occlusion queries for checking visibility.</string>

    <string name="section_advanced">Advanced Rendering</string>
    <string name="renderer_advanced_deferred_title">Deferred Lightning</string>
    <string name="renderer_advanced_deferred_caption">Renders a scene with deferred lightning technique.</string>
    <string name="renderer_advanced_dof_title">Depth of field</string>
    <string name="renderer_advanced_dof_caption">Renders a scene with depth of field and Blinn-Phong shading.</string>

    <string name="section_camera2">Camera2 Rendering</string>
    <string name="renderer_camera2_basic_title">Basic</string>
    <string name="renderer_camera2_basic_caption">Renders camera preview from surface texture using Camera2 API.</string>
    <string name="renderer_camera2_yuv_title">Yuv Input</string>
    <string name="renderer_camera2_yuv_caption">Renders camera preview from ImageReader using Camera2 API and GLSL shaders to convert yuv images into rgb.</string>
    <string name="renderer_camera2_raw_title">Raw Input</string>
    <string name="renderer_camera2_raw_caption">Renders camera preview from ImageReader using Camera2 API and GLSL shaders to convert raw images into rgb.</string>

    <string name="section_camera2effect">Camera2 Effect Rendering</string>
    <string name="renderer_camera2effect_radial_dots_title">Radial Dots</string>
    <string name="renderer_camera2effect_radial_dots_caption">Renders radial dots effect using Camera2 API and OpenGL ES 3.0.</string>
    <string name="renderer_camera2effect_voronoi_title">Voronoi</string>
    <string name="renderer_camera2effect_voronoi_caption">Renders voronoi effect using Camera2 API and OpenGL ES 3.0.</string>
    <string name="renderer_camera2effect_edge_detection_title">Edge Detection</string>
    <string name="renderer_camera2effect_edge_detection_caption">Renders edge detection effect using Camera2 API and OpenGL ES 3.0.</string>
    <string name="renderer_camera2effect_oil_painting_title">Oil Painting</string>
    <string name="renderer_camera2effect_oil_painting_caption">Renders oil painting effect using Camera2 API and OpenGL ES 3.0.</string>

    <string name="section_blackandwhite">Black and White</string>
    <string name="renderer_blackandwhite_tunnel_title">Tunnel</string>
    <string name="renderer_blackandwhite_tunnel_caption">Renders a moving tunnel using black and white circles.</string>
    <string name="renderer_blackandwhite_twister_title">Twister</string>
    <string name="renderer_blackandwhite_twister_caption">Renders rotating twister using black triangles.</string>

    <string name="section_test">Test Renderers</string>
    <string name="renderer_test_clear_title">Random Clear</string>
    <string name="renderer_test_clear_caption">Clears framebuffer with random color.</string>

    <string-array name="camera2_filter_filters">
        <item>None</item>
        <item>Black and White</item>
        <item>Sepia</item>
    </string-array>

    <string-array name="camera2_filter_effects">
        <item>None</item>
        <item>Radial Dots</item>
        <item>Edge Detection</item>
        <item>Voronoi</item>
        <item>Oil Painting</item>
    </string-array>

</resources>
